Update Porto / CV web Clement

--- a/main.html
+++ b/main.html
@@ -94,7 +94,7 @@
         </div>
         <div class="row justify-content-center fs-5 text-center">
           <div class="col-6">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus assumenda consequatur expedita maxime ullam alias tempora ex veritatis adipisci! Nulla nemo tenetur debitis ipsam quidem consequatur qui rerum fuga provident.
+            Good day. My name is Nicholas Clement Bamba, I'm from Tangerang. I am fresh graduate student from BINUS University on Computer Science major. I'm looking for job opportunity that whould allow me to train my skill further.
           </div>
         </div>
       </div>
@@ -230,6 +230,14 @@
                   <img src="pict/fm/bts.svg" alt="css" width="80px" height="80px" />
                   <div class="card-body">
                     <h5 class="card-title">Bootstrap 5</h5>
+                  </div>
+                </div>
+              </div>
+              <div class="col p-4">
+                <div class="card text-center mx-auto d-block border-0">
+                  <img src="pict/fm/sass.png" alt="css" width="90px" height="80px" />
+                  <div class="card-body">
+                    <h5 class="card-title">SASS</h5>
                   </div>
                 </div>
               </div>
