update profile pic 2

--- a/main.html
+++ b/main.html
@@ -72,7 +72,7 @@
 
   <body>
     <section class="jumbotron text-center">
-      <img src="pict/index.jpg" alt="" width="200" height="200" class="rounded-circle mt-5" />
+      <img src="pict/indexedit.png" alt="" width="200" height="220" />
       <h1 class="display-4 fw-bold">Nicholas Clement Bamba</h1>
       <p class="lead">BINUS University Student</p>
       <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
